Safari fixes: date automatic conversion and amenities vertical align.

--- a/css/main.css
+++ b/css/main.css
@@ -466,6 +466,7 @@ body {
   padding: 0;
   position: relative;
   text-indent: -100em;
+  vertical-align: middle;
   width: 30px;
 }
 
